--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,29 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
 # dependencies
 node_modules
 package-lock.json
+/.pnp
+.pnp.js
 
-# builds
-buiild
+# testing
+coverage
+junit\.xml
+
+# production
+build
 statistics.html
 
-# tests
-junit\.xml
-coverage/
+#logs
+*.logs*
 
-# logs
-*.log*
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
