--- a/package.json
+++ b/package.json
@@ -1,8 +1,60 @@
 {
-    "name": "pb-ui",
-    "version": "0.0.0",
-    "description" : "Personal CRM / Address Book",
-    "author": "Jonathan Paul Wood",
-    "scripts": {
-    }
+  "name": "pc-ui",
+  "version": "0.1.0",
+  "description": "Personal CRM / Address Book",
+  "author": "Jonathan Paul Wood",
+  "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.2.2",
+    "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
+    "classnames": "^2.2.6",
+    "content-disposition": "^0.5.3",
+    "history": "^5.0.0",
+    "html-react-parser": "^0.14.1",
+    "js-cookie": "^2.2.1",
+    "prop-types": "^15.7.2",
+    "qs": "^6.9.4",
+    "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.0.0",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.0",
+    "react-select": "^3.1.0",
+    "react-toastify": "^6.1.0",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "remarkable": "^2.0.1",
+    "styled-components": "^5.2.1",
+    "uuid": "^8.3.1",
+    "web-vitals": "^0.2.4"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
