--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "bootstrap-icons": "^1.1.0",
     "classnames": "^2.2.6",
     "content-disposition": "^0.5.3",
-    "history": "^5.0.0",
+    "history": "4.10.1",
     "html-react-parser": "^0.14.1",
     "js-cookie": "^2.2.1",
     "js-cookies": "^1.0.4",
