--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "html-react-parser": "^0.14.1",
     "js-cookie": "^2.2.1",
     "js-cookies": "^1.0.4",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "qs": "^6.9.4",
     "react": "^17.0.1",
