--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "qs": "^6.9.4",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
+    "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
     "react-popper": "^2.2.4",
     "react-redux": "^7.2.2",
