removed carrots: use specific package numbers for better security

--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "bootstrap-icons": "^1.1.0",
     "classnames": "^2.2.6",
     "content-disposition": "^0.5.3",
+    "firebase": "^8.2.2",
     "history": "4.10.1",
     "html-react-parser": "^0.14.1",
     "js-cookie": "^2.2.1",
