add script to create database file

--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "db-init": "echo file > main.db"
   },
   "keywords": [
     "nodejs",
