--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "db-init": "echo file > main.db"
+    "db-init-win": "fsutil file createnew main.db 0",
+    "db-init-lin": "touch maind.db"
   },
   "keywords": [
     "nodejs",
