removed unused analytics package

--- a/ui/package.json
+++ b/ui/package.json
@@ -46,8 +46,7 @@
     "redux-thunk": "^2.3.0",
     "remarkable": "^2.0.1",
     "styled-components": "^5.2.1",
-    "uuid": "^8.3.1",
-    "web-vitals": "^0.2.4"
+    "uuid": "^8.3.1"
   },
   "eslintConfig": {
     "extends": [
