--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "db-init-win": "fsutil file createnew main.db 0",
-    "db-init-lin": "touch maind.db"
+    "db-init-lin": "touch main.db"
   },
   "keywords": [
     "nodejs",
