--- a/ui/package.json
+++ b/ui/package.json
@@ -26,6 +26,7 @@
     "content-disposition": "^0.5.3",
     "history": "4.10.1",
     "html-react-parser": "^0.14.1",
+    "husky": "^4.3.7",
     "js-cookie": "^2.2.1",
     "js-cookies": "^1.0.4",
     "node-sass": "^4.14.1",
@@ -54,6 +55,11 @@
       "react-app",
       "react-app/jest"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm run ut && npm run lint"
+    }
   },
   "browserslist": {
     "production": [
