--- a/ui/package.json
+++ b/ui/package.json
@@ -15,39 +15,39 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@popperjs/core": "^2.6.0",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.2.2",
-    "axios": "^0.21.1",
-    "bootstrap": "^4.5.3",
-    "bootstrap-icons": "^1.1.0",
-    "classnames": "^2.2.6",
-    "content-disposition": "^0.5.3",
-    "history": "4.10.1",
-    "html-react-parser": "^0.14.1",
-    "js-cookie": "^2.2.1",
-    "js-cookies": "^1.0.4",
-    "node-sass": "^4.14.1",
-    "prop-types": "^15.7.2",
-    "qs": "^6.9.4",
-    "react": "^17.0.1",
-    "react-beautiful-dnd": "^13.0.0",
-    "react-bootstrap": "^1.4.0",
-    "react-datepicker": "^3.3.0",
-    "react-dom": "^17.0.1",
-    "react-popper": "^2.2.4",
-    "react-redux": "^7.2.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
-    "react-select": "^3.1.0",
-    "react-toastify": "^6.1.0",
-    "redux": "^4.0.5",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
-    "remarkable": "^2.0.1",
-    "styled-components": "^5.2.1",
-    "uuid": "^8.3.1"
+    "@popperjs/core": "2.x.x",
+    "@testing-library/jest-dom": "5.x.x",
+    "@testing-library/react": "11.x.x",
+    "@testing-library/user-event": "12.x.x",
+    "axios": "0.x.x",
+    "bootstrap": "4.x.x",
+    "bootstrap-icons": "1.x.x",
+    "classnames": "2.x.x",
+    "content-disposition": "0.x.x",
+    "history": "4.x.x",
+    "html-react-parser": "0.x.x",
+    "js-cookie": "2.x.x",
+    "js-cookies": "1.x.x",
+    "node-sass": "4.x.x",
+    "prop-types": "15.x.x",
+    "qs": "6.x.x",
+    "react": "17.x.x",
+    "react-beautiful-dnd": "13.x.x",
+    "react-bootstrap": "1.x.x",
+    "react-datepicker": "3.x.x",
+    "react-dom": "17.x.x",
+    "react-popper": "2.x.x",
+    "react-redux": "7.x.x",
+    "react-router-dom": "5.x.x",
+    "react-scripts": "4.x.x",
+    "react-select": "3.x.x",
+    "react-toastify": "6.x.x",
+    "redux": "4.x.x",
+    "redux-logger": "3.x.x",
+    "redux-thunk": "2.x.x",
+    "remarkable": "2.x.x",
+    "styled-components": "5.x.x",
+    "uuid": "8.x.x"
   },
   "eslintConfig": {
     "extends": [
@@ -68,12 +68,12 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-export-default-from": "^7.12.1",
-    "eslint": "^7.32.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.24.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-react": "^7.24.0"
+    "@babel/plugin-proposal-export-default-from": "7.x.x",
+    "eslint": "7.x.x",
+    "eslint-config-standard": "16.x.x",
+    "eslint-plugin-import": "2.x.x",
+    "eslint-plugin-node": "11.x.x",
+    "eslint-plugin-promise": "5.x.x",
+    "eslint-plugin-react": "7.x.x"
   }
 }
