--- a/ui/package.json
+++ b/ui/package.json
@@ -4,6 +4,7 @@
   "description": "Personal CRM / Address Book",
   "author": "Jonathan Paul Wood",
   "private": true,
+  "main": "public/electron.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -12,7 +13,9 @@
     "lint": "eslint ./src",
     "lint-fix": "eslint ./src --fix",
     "lint-fix-dry-run": "eslint ./src --fix-dry-run",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "concurrently -k \"cross-env BROWSER=none npm start\" \"npm:electron\"",
+    "electron": "wait-on tcp:3000 && electron ."
   },
   "dependencies": {
     "@popperjs/core": "^2.6.0",
@@ -23,7 +26,9 @@
     "bootstrap": "^4.5.3",
     "bootstrap-icons": "^1.1.0",
     "classnames": "^2.2.6",
+    "concurrently": "^7.6.0",
     "content-disposition": "^0.5.3",
+    "cross-env": "^7.0.3",
     "history": "4.10.1",
     "html-react-parser": "^0.14.1",
     "js-cookie": "^2.2.1",
@@ -47,7 +52,9 @@
     "redux-thunk": "^2.3.0",
     "remarkable": "^2.0.1",
     "styled-components": "^5.2.1",
-    "uuid": "^8.3.1"
+    "uuid": "^8.3.1",
+    "wait-on": "^6.0.1",
+    "web-vitals": "^2.1.4"
   },
   "eslintConfig": {
     "extends": [
@@ -68,12 +75,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-export-default-from": "^7.12.1",
-    "eslint": "^7.32.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.24.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-react": "^7.24.0"
+    "electron": "^22.0.0",
+    "electron-is-dev": "^2.0.0"
   }
 }
