--- a/ui/package.json
+++ b/ui/package.json
@@ -17,37 +17,38 @@
   "dependencies": {
     "@popperjs/core": "^2.6.0",
     "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.2.2",
-    "axios": "^0.21.1",
-    "bootstrap": "^4.5.3",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "axios": "^1.3.2",
+    "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.1.0",
     "classnames": "^2.2.6",
     "content-disposition": "^0.5.3",
-    "history": "4.10.1",
-    "html-react-parser": "^0.14.1",
-    "js-cookie": "^2.2.1",
+    "history": "5.3.0",
+    "html-react-parser": "^3.0.8",
+    "js-cookie": "^3.0.1",
     "js-cookies": "^1.0.4",
-    "node-sass": "^4.14.1",
+    "node-gyp": "^9.3.1",
+    "node-sass": "^8.0.0",
     "prop-types": "^15.7.2",
     "qs": "^6.9.4",
-    "react": "^17.0.1",
+    "react": "^18.2.0",
     "react-beautiful-dnd": "^13.0.0",
-    "react-bootstrap": "^1.4.0",
-    "react-datepicker": "^3.3.0",
-    "react-dom": "^17.0.1",
+    "react-bootstrap": "^2.7.0",
+    "react-datepicker": "^4.10.0",
+    "react-dom": "^18.2.0",
     "react-popper": "^2.2.4",
-    "react-redux": "^7.2.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
-    "react-select": "^3.1.0",
-    "react-toastify": "^6.1.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.0",
+    "react-scripts": "^5.0.1",
+    "react-select": "^5.7.0",
+    "react-toastify": "^9.1.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "remarkable": "^2.0.1",
     "styled-components": "^5.2.1",
-    "uuid": "^8.3.1"
+    "uuid": "^9.0.0"
   },
   "eslintConfig": {
     "extends": [
@@ -68,12 +69,16 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.13.0",
     "@babel/plugin-proposal-export-default-from": "^7.12.1",
-    "eslint": "^7.32.0",
-    "eslint-config-standard": "^16.0.3",
+    "eslint": "^8.33.0",
+    "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.24.0",
+    "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-react": "^7.24.0"
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.24.0",
+    "jquery": "^3.6.3",
+    "typescript": "^4.9.5"
   }
 }
