update package name

--- a/ui/package.json
+++ b/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pc-ui",
+  "name": "courm",
   "version": "0.1.0",
   "description": "Personal CRM / Address Book",
   "author": "Jonathan Paul Wood",
